<!DOCTYPE resources [
    <!ENTITY app_name "Shachi">
    <!ENTITY app_desc "A Booru Client">
]>

<resources>
    <string name="app_name">&app_name;</string>
    <string name="app_desc">&app_desc;</string>
    <string name="pinned">Pinned</string>
    <string name="title">Title</string>
    <string name="posts">Posts</string>
    <string name="favorite">Favorite</string>
    <string name="unfavorite">Unfavorite</string>
    <string name="more">More</string>
    <string name="detail">Detail</string>
    <string name="details">Details</string>
    <string name="pin">Pin</string>
    <string name="pin_tags">Pin tags</string>
    <string name="servers">Servers</string>
    <string name="manage_servers">Manage servers</string>
    <string name="select_server">Select server</string>
    <string name="new_server">New server</string>
    <string name="ok">OK</string>
    <string name="source">Source</string>
    <string name="tags">Tags</string>
    <string name="size">Size</string>
    <string name="posted">Posted</string>
    <string name="rating">Rating</string>
    <string name="score">Score</string>
    <string name="md5">MD5</string>
    <string name="copied">Copied to clipboard</string>
    <string name="save">Save</string>
    <string name="host">Host</string>
    <string name="search">Search</string>
    <string name="name">Name</string>
    <string name="clear">Clear</string>
    <string name="home">Home</string>
    <string name="share">Share</string>
    <string name="apply">Apply</string>
    <string name="selected_tags">Selected tags</string>
    <string name="current_tags">Current tags</string>
    <string name="suggested_tags">Suggested tags</string>
    <string name="artist">Artist</string>
    <string name="character">Character</string>
    <string name="metadata">Metadata</string>
    <string name="copyright">Copyright</string>
    <string name="general">General</string>
    <string name="other">Other</string>
    <string name="select">Select</string>
    <string name="exclude">Exclude</string>
    <string name="retry">Retry</string>
    <string name="add">Add</string>
    <string name="browse">Browse</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="appearance">Appearance</string>
    <string name="theme">Theme</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="follow_system">Follow system</string>
    <string name="staggered">Staggered</string>
    <string name="square">Square</string>
    <string name="grid_column_portrait">Grid column (portrait)</string>
    <string name="grid_column_landscape">Grid column (landscape)</string>
    <string name="grid_mode">Grid mode</string>
    <string name="saved">Saved</string>
    <string name="saved_search">Saved search</string>
    <string name="saved_searches">Saved searches</string>
    <string name="save_search">Save search</string>
    <string name="new_search">New search</string>
    <string name="refresh">Refresh</string>
    <string name="blacklisted_tags">Blacklisted tags</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="display">Display</string>
    <string name="remove_search">Remove search</string>
    <string name="open_source_notices">Open source licenses</string>
    <string name="loading">Loading…</string>
    <string name="downloading">Downloading…</string>
    <string name="download">Download</string>
    <string name="download_finished">Download finished</string>
    <string name="download_path">Download path</string>
    <string name="download_path_not_set">Download path not set</string>
    <string name="not_set_message">Not set</string>
    <string name="saved_search_description_title_text">Title of the saved search, default to first tag if empty</string>
    <string name="saved_search_update_description_title_text">Title of the saved search, cannot be empty</string>
    <string name="empty_server_help_text">There is no server setup/selected. To setup your server go to More > Servers > + > fill title, host url and select server type > save > select server to use</string>
    <string name="empty_home_help_text">There is no saved searches. Browse and save to have search shows here</string>
    <string name="preview_quality">Preview Quality</string>
    <string name="detail_quality">Detail Quality</string>
    <string name="preview">Preview</string>
    <string name="sample">Sample</string>
    <string name="original">Original</string>
    <string name="search_history">Search history</string>
    <string name="manual_search">Manual search</string>
    <string name="simple_search">Simple search</string>
    <string name="filters">Filters</string>
    <string name="questionable">Questionable</string>
    <string name="explicit">Explicit</string>
    <string name="blacklist">Blacklist</string>
    <string name="api_key">API key</string>
    <string name="username">Username</string>
    <string name="login_optional">Login (Optional)</string>
    <string name="disable">Disable</string>
    <string name="hide">Blur rated post when browse but not when viewing</string>
    <string name="mute">Don\'t show rated post</string>
    <string name="notes">Notes</string>
    <string name="comments">Comments</string>
    <string name="update_title">Update Title</string>
    <string name="share_file">Share file</string>
    <string name="share_link">Share link to post</string>
    <string name="share_source_link">Share source link</string>
    <string name="hide_bottom_bar_on_scroll">Hide bottom bar on scroll</string>
    <string name="backup_and_restore">Backup and restore</string>
    <string name="backup">Backup</string>
    <string name="backup_summary">Backup data</string>
    <string name="restore">Restore</string>
    <string name="restore_summary">Restore data</string>
    <string name="select_image">Select image</string>
    <string name="there_is_no_comment">There is no comment</string>
    <string name="advanced">Advanced</string>
    <string name="send_crash_reports">Send crash reports</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="app_version">App version</string>
    <string name="about">About</string>
    <string name="github">Github</string>
    <string name="hostname">Hostname</string>
    <string name="page">Page</string>
    <string name="license_agree">Acknowledged</string>
    <string name="license_notice">"
        &app_name;—&app_desc;
        Copyright © 2025 hyphens@pm.me

        This program is free software: you can redistribute it and/or modify
        it under the terms of the GNU General Public License as published by
        the Free Software Foundation, either version 3 of the License, or
        (at your option) any later version.

        This program is distributed in the hope that it will be useful,
        but WITHOUT ANY WARRANTY; without even the implied warranty of
        MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
        GNU General Public License for more details.

        You should have received a copy of the GNU General Public License
        along with this program.  If not, see https://www.gnu.org/licenses/.
    "</string>
    <string name="post_thumbnail_description">A post thumbnail</string>
</resources>