<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/servers">
        <Preference
            app:fragment="com.faldez.shachi.ui.servers.ServersFragment"
            app:key="servers"
            app:summary="@string/manage_servers"
            app:title="@string/servers" />
        <Preference
            app:fragment="com.faldez.shachi.ui.blacklisted_tag.BlacklistedTagFragment"
            app:key="blacklisted_tags"
            app:summary="@string/blacklisted_tags"
            app:title="@string/blacklisted_tags" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings">
        <Preference
            app:fragment="com.faldez.shachi.ui.settings.SettingsFragment"
            app:icon="@drawable/ic_baseline_settings_24"
            app:key="settings"
            app:title="@string/settings" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/backup_and_restore">
        <Preference
            android:title="@string/backup"
            app:key="backup"
            app:summary="@string/restore_summary" />
        <Preference
            android:title="@string/restore"
            app:key="restore"
            app:summary="@string/restore_summary" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/other">
        <Preference
            app:fragment="com.faldez.shachi.ui.oss.OssFragment"
            app:key="oss_notices"
            app:title="@string/open_source_notices" />
    </PreferenceCategory>
</PreferenceScreen>