<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/servers">
        <Preference
            app:fragment="com.faldez.bonito.ui.more.MoreFragment"
            app:key="servers"
            app:summary="@string/manage_servers"
            app:title="@string/servers" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/appearance">

        <ListPreference
            app:defaultValue="follow_system"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:icon="@drawable/ic_baseline_palette_24"
            app:key="theme"
            app:title="@string/theme"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>