<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/pinnedFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_push_pin_24"
        android:title="@string/pinned"/>
    <item
        android:id="@+id/browseServerFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_explore_24"
        android:title="@string/browse"/>
    <item
        android:id="@+id/favoriteFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/favorite"/>
    <item
        android:id="@+id/moreFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_more_horiz_24"
        android:title="@string/more"/>
</menu>