<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/favorite_button"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_favorite_border_24"
        android:title="@string/favorite"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/detail_button"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_info_24"
        android:title="@string/detail"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/share_button"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_share_24"
        android:title="@string/share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/download_button"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_download_24"
        android:title="@string/download"
        app:showAsAction="ifRoom" />
</menu>