<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search_button"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:showAsAction="always" />
    <item
        android:id="@+id/save_search_button"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_save_24"
        android:title="@string/save_search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/search_history_button"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_history_24"
        android:title="@string/search_history"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/select_server_button"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_storage_24"
        android:title="@string/select_server"
        app:showAsAction="ifRoom"  />
    <item
        android:id="@+id/advanced_search_button"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_mode_24"
        android:title="@string/advanced_search"
        app:showAsAction="ifRoom"  />
</menu>