<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:id="@+id/artistTagsHeader"
        style="@style/TextAppearance.Material3.LabelMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/artist"
        android:visibility="gone" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/artistTagsChipGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <TextView
        android:id="@+id/characterTagsHeader"
        style="@style/TextAppearance.Material3.LabelMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/character"
        android:visibility="gone" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/characterTagsChipGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <TextView
        android:id="@+id/copyrightTagsHeader"
        style="@style/TextAppearance.Material3.LabelMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/copyright"
        android:visibility="gone" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/copyrightTagsChipGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <TextView
        android:id="@+id/generalTagsHeader"
        style="@style/TextAppearance.Material3.LabelMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/general"
        android:visibility="gone" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/generalTagsChipGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <TextView
        android:id="@+id/metadataTagsHeader"
        style="@style/TextAppearance.Material3.LabelMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/metadata"
        android:visibility="gone" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/metadataTagsChipGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <TextView
        android:id="@+id/otherTagsHeader"
        style="@style/TextAppearance.Material3.LabelMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/other"
        android:visibility="gone" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/otherTagsChipGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />
</merge>